1. Refactored saveSoftAskCommonData() method in SoftAskCommonServiceImpl. 2. Refactored SoftAskUserVoteHolder. 3. Updated README.md file